# coi-rocket-sample

./: Cargo.toml  README.md
src/: main.rs  postgres.rs
src/dtos/: data.rs  errors.rs  mod.rs
src/models/: data.rs
src/repositories/: error.rs  mod.rs  repo.rs
src/routes/: data.rs  mod.rs  traits.rs
src/services/: error.rs  mod.rs  service.rs
xtask/: Cargo.toml
xtask/src/: main.rs
