[package]
name = "coi-rocket-sample"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-rocket-sample"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
coi = "0.9.1"
coi-rocket = { path = "../coi-rocket", version = "0.1.0" }
env_logger = "0.7.1"
futures = "0.3.4"
log = "0.4.8"
mobc-postgres = "0.5.0"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde_tokio_postgres = { git = "https://github.com/githubaccount624/serde_postgres" }
serde = { version = "1.0.104", features = ["derive"] }
thiserror = "1.0"

[features]
default = []
debug = ["coi/debug"]
