[package]
name = "coi-rocket-sample"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-rocket-sample"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
coi = "0.10.2"
coi-rocket = { version = "0.2.0" }
env_logger = "0.10.1"
futures = "0.3.4"
log = "0.4.8"
mobc-postgres = "0.8.0"
rocket = { version = "0.5.0", features = ["json"] }
tokio-postgres = "0.7.10"
serde = { version = "1.0.104", features = ["derive"] }
thiserror = { version = "1.0.50", default-features = false }

[features]
default = []
debug = ["coi/debug"]
